--- a/SDG 4 - Quality Education/Results/1/Result 1.html
+++ b/SDG 4 - Quality Education/Results/1/Result 1.html
@@ -241,7 +241,7 @@
         </div>
     </div>
     <script>
-        // Retro beep on flip
+        // Retro beep 
         const flipContainer = document.getElementById("flip-card");
         flipContainer.addEventListener("click", function() {
             try {
