--- a/SDG 4 - Quality Education/Quiz/Quiz4.Html
+++ b/SDG 4 - Quality Education/Quiz/Quiz4.Html
@@ -390,7 +390,7 @@
       ];
       window.location.href = resultPages[resultIndex];
     }
-
+// error
     function updateProgressBar() {
       const barHighlight = document.querySelector(".bar-highlight");
       if (barHighlight) {
