--- a/public/sdg5/Game.html
+++ b/public/sdg5/Game.html
@@ -285,6 +285,7 @@
         <div class="buttonqn">
             <button class="button" onclick="window.location.href='../../NGOPROFILE.html'">🔍 Learn More</button>
             <button class="button1" onclick="window.open('https://www.instagram.com/bytesizedimpact25/')">💖Our IG 💖 </button>
+            <button class="button1" onclick="window.open('https://planet-purr.vercel.app/')">💖Homepage 💖 </button>
         </div>
 
  <p class="desc" style="font-style: italic; margin-top: 30px;">
