--- a/public/sdg4qe/Results/4/Result 4.html
+++ b/public/sdg4qe/Results/4/Result 4.html
@@ -224,9 +224,9 @@
             🌍 Want to fuel change? <br> Just curiosity, conscience, and one quick click. 🔗
         </p>
         <div class="buttonqn">
-            <button class="button" onclick="window.location.href='../../../NGOPROFILE.html'">🔍 Learn
-                More</button>
-            <button class="button1" onclick="window.open('https://www.instagram.com/bytesizedimpact25/')">💖Our IG 💖 </button>
+            <button class="button" onclick="window.location.href='../../../NGOPROFILE.html'">LearnMore</button>
+            <button class="button1" onclick="window.open('https://www.instagram.com/bytesizedimpact25/')">Our IG💖 </button>
+            <button class="button1" onclick="window.open('https://planet-purr.vercel.app/')">Homepage</button>
         </div>
         <div class="description-block">
             <p class="desc" style="font-style: italic; margin-top: 30px;">
@@ -262,3 +262,4 @@
     </script>
 </body>
 </html>
+
