--- a/public/sdg7/Results/2/Result2.html
+++ b/public/sdg7/Results/2/Result2.html
@@ -273,8 +273,9 @@
         </p>
 
         <div class="buttonqn">
-            <button class="button" onclick="window.location.href='../../../NGOPROFILE.html'">🔍 Learn More</button>
-            <button class="button1" onclick="window.open('https://www.instagram.com/bytesizedimpact25/')">💖Our IG 💖 </button>
+            <button class="button" onclick="window.location.href='../../../NGOPROFILE.html'">LearnMore</button>
+            <button class="button1" onclick="window.open('https://www.instagram.com/bytesizedimpact25/')">Our IG💖 </button>
+            <button class="button1" onclick="window.open('https://planet-purr.vercel.app/')">Homepage</button>
         </div>
         <div class="description-block">
             <p class="desc" style="font-style: italic; margin-top: 30px;">
